[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stuart"
description = "A self-hostable game data aggregator for Elite: Dangerous"
version = "0.2.0"
# cf. https://www.bitecode.dev/p/relieving-your-python-packaging-pain,
# https://devguide.python.org/versions/
requires-python = ">=3.10"
# cf. https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: No Input/Output (Daemon)",
    "Framework :: Flask",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Database :: Front-Ends",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Utilities",
]
# To avoid unnecessary developer overhead, only set version
# constraints to address capability, compatibility, or security
# issues, and avoid pinning specific versions if possible.
dependencies = [
    "bootstrap-flask",
    "flask",
    "flask-sqlalchemy",
    "flask-talisman",
    "flask-wtf",
    "gunicorn",
    "lethbridge",
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "autopep8",
    "black",
    "build",
    "flake8",
    "isort",
    "id",
    "jedi",
    "pip-tools",
    "pre-commit",
    "python-semantic-release",
    "twine",
    "yapf",
    "yq",
]
psycopg2 = [
    "psycopg2",
]
psycopg2cffi = [
    "psycopg2cffi",
]
test = [
    "psycopg2",
    "pytest",
    "pytest-cov",
    "pytest-emoji",
    "pytest-flask",
    "pytest-md",
    "pytest-order",
    "pytest-postgresql",
    "pytest-reportlog",
    "simplejson",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
# Invoke smoke tests with `pytest -k smoke` or `pytest -m "smoke and
# not slow"`.  See also https://docs.pytest.org/en/stable/mark.html,
# https://stackoverflow.com/a/52369721.
markers = [
    "slow",
    "smoke",
]

[tool.semantic_release]
assets = []
commit_message = "release: cut the v{version} release\n\nAutomatically generated by python-semantic-release"
commit_parser = "angular"
logging_use_named_masks = false
tag_format = "v{version}"
version_toml = [
    "pyproject.toml:project.version",
]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease = false
prerelease_token = "rc"

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <releng@irtnog.org>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[tool.setuptools.package-dir]
stuart = "src"
